[metadata]
name = dev-with-docker-sample
summary = Development with Docker
description-file =
    README.md
author = Trinh Nguyen
author-email = dangtrinhnt@gmail.com
home-page = https://wwww.dangtrinh.com
python-requires = >=3.6
classifier =
    Environment :: Python
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX : Linux
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3 :: Only

[zest.releaser]
python-file-with-version = apps/keycloak_flask/__init__.py